log
Wed Oct 21 19:40:51 UTC 2020: 
 heap.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
heap.c: In function ‘heap_push’:
heap.c:28:18: error: ‘pc’ undeclared (first use in this function); did you mean ‘pq’?
     pq->capac = (pc->capac) * 2 + 1;
                  ^~
                  pq
heap.c:28:18: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
Wed Oct 21 19:41:02 UTC 2020: 
 heap.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
heap.c: In function ‘heap_push’:
heap.c:28:18: error: ‘pc’ undeclared (first use in this function); did you mean ‘pq’?
     pq->capac = (pc->capac) * 2 + 1;
                  ^~
                  pq
heap.c:28:18: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
Wed Oct 21 19:41:09 UTC 2020: 
 heap.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
 tests:  5|3
total_score: 25/70
1e8ec96
Thu Oct 22 23:08:20 UTC 2020: 
 heap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  5|3
total_score: 25/70
066a4a1
Thu Oct 22 23:11:08 UTC 2020: 
 heap.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  5|3
total_score: 25/70
a0482ea
Thu Oct 22 23:11:48 UTC 2020: 
 heap.c | 9 +++------
 1 file changed, 3 insertions(+), 6 deletions(-)
 tests:  5|3
total_score: 25/70
c489f7e
Thu Oct 22 23:13:11 UTC 2020: 
 heap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  5|3
total_score: 25/70
65fb021
Thu Oct 22 23:14:50 UTC 2020: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 25/70
b3a5e82
Thu Oct 22 23:18:28 UTC 2020: 
 heap.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
 tests:  6|2
total_score: 35/70
86505c9
Fri Oct 23 02:01:20 UTC 2020: 
 heap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  6|2
total_score: 35/70
327bd59
Fri Oct 23 02:02:05 UTC 2020: 
 heap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  7|1
total_score: 45/70
083f301
Fri Oct 23 02:02:21 UTC 2020: 
 heap.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  7|1
total_score: 45/70
2e5866e
Fri Oct 23 02:03:13 UTC 2020: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  7|1
total_score: 45/70
243a2d8
